kubernetes/generatedManifests/test/infrastructure/argocd/1-manifest/v1-service-argocd-argocd-argo-cd-repo-server.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"labels":{"app.kubernetes.io/component":"repo-server","app.kubernetes.io/instance":"argocd","app.kubernetes.io/managed-by":"pulumi","app.kubernetes.io/name":"argo-cd","helm.sh/chart":"argo-cd-4.2.3"},"name":"argocd-argo-cd-repo-server","namespace":"argocd"},"spec":{"ports":[{"name":"tcp-repo-server","port":8081,"protocol":"TCP","targetPort":"repo-server"}],"selector":{"app.kubernetes.io/component":"repo-server","app.kubernetes.io/instance":"a [...]
  labels:
    app.kubernetes.io/component: repo-server
    app.kubernetes.io/instance: argocd
    app.kubernetes.io/managed-by: pulumi
    app.kubernetes.io/name: argo-cd
    helm.sh/chart: argo-cd-4.2.3
  name: argocd-argo-cd-repo-server
  namespace: argocd
spec:
  ports:
  - name: tcp-repo-server
    port: 8081
    protocol: TCP
    targetPort: repo-server
  selector:
    app.kubernetes.io/component: repo-server
    app.kubernetes.io/instance: argocd
    app.kubernetes.io/name: argo-cd
  sessionAffinity: None
  type: ClusterIP
