kubernetes/generatedManifests/test/infrastructure/argocd/1-manifest/v1-service-argocd-argocd-redis-master.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"labels":{"app.kubernetes.io/component":"master","app.kubernetes.io/instance":"argocd","app.kubernetes.io/managed-by":"pulumi","app.kubernetes.io/name":"redis","helm.sh/chart":"redis-17.3.2"},"name":"argocd-redis-master","namespace":"argocd"},"spec":{"internalTrafficPolicy":"Cluster","ports":[{"name":"tcp-redis","port":6379,"targetPort":"redis"}],"selector":{"app.kubernetes.io/component":"master","app.kubernetes.io/instance":"argocd","app.kub [...]
  labels:
    app.kubernetes.io/component: master
    app.kubernetes.io/instance: argocd
    app.kubernetes.io/managed-by: pulumi
    app.kubernetes.io/name: redis
    helm.sh/chart: redis-17.3.2
  name: argocd-redis-master
  namespace: argocd
spec:
  internalTrafficPolicy: Cluster
  ports:
  - name: tcp-redis
    port: 6379
    targetPort: redis
  selector:
    app.kubernetes.io/component: master
    app.kubernetes.io/instance: argocd
    app.kubernetes.io/name: redis
  sessionAffinity: None
  type: ClusterIP
